Fix bottom-bar extra whitespace issue

--- a/css/core-style.css
+++ b/css/core-style.css
@@ -38,7 +38,6 @@
 
 body {
     position: relative;
-    overflow-x: hidden;
 }
 .headerfont {
     font-family: 'Playfair Display SC', serif;
@@ -370,7 +369,7 @@ img {
 * Preloader CSS
 */
 
-#preloader {
+/*#preloader {
     overflow: hidden;
     background-color: #fff;
     height: 100%;
@@ -379,7 +378,7 @@ img {
     top: 0;
     width: 100%;
     z-index: 999999;
-}
+}*/
 
 .classy-load {
     -webkit-animation: 2000ms linear 0s normal none infinite running classy-load;
